remove database properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 server.port=8081
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/farmer?autoReconnect=true&useSSL=false&characterEncoding=utf-8&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=xiangjianjian
 mybatis.type-aliases-package=com.feidian.farmer.dao.entity
 mybatis.mapper-locations=classpath:mapper/*.xml
+spring.profiles.active=dev
